Add physical-memory-control, raw-usb, dbus interface
These interfaces require snapd >= 2.21, and won't auto connect. Connect them with

sudo snap connect uefi-fw-tools:fwupdmgr-dbus-client uefi-fw-tools:fwupd-dbus-server
sudo snap connect uefi-fw-tools:physical-memory-control core:physical-memory-control
sudo snap connect uefi-fw-tools:raw-usb core:raw-usb

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -16,15 +16,20 @@ confinement: strict
 apps:
     fwupdmgr:
         command: bin/fwupdmgr.sh
-        plugs: [network,fwupdmgr] #network plug for sendmmsg
+        plugs: [network,fwupdmgr,fwupdmgr-dbus-client] #network plug for sendmmsg
     fwupd:
         command: bin/fwupd.sh
         daemon: simple
-        slots: [fwupd]
+        slots: [fwupd,fwupd-dbus-server]
+        plugs: [raw-usb,physical-memory-control]
 
 plugs:
   fwupdmgr:
     interface: fwupd
+  fwupdmgr-dbus-client:
+    interface: dbus
+    name: org.freedesktop.fwupd
+    bus: system
 
 slots:
   fwupd:
@@ -34,6 +39,14 @@ slots:
     interface: content
     write:
       - $SNAP_DATA
+  fwupd-dbus-server:
+    interface: dbus
+    name: org.freedesktop.fwupd
+    bus: system
+
+hooks:
+  configure: # fix confusing apparmor denial < snapd 2.23.6, lp: #1675812
+    plugs: [network]
 
 parts:
     libefivar-dev:
