--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -37,13 +37,17 @@ slots:
 parts:
   libefivar-dev:
     plugin: make
-    source: https://github.com/lyoncore/efivar.git
+    source: https://github.com/rhboot/efivar.git
     source-type: git
-    source-branch: efivar-37
+    source-commit: f0d3ed17ef3b2bbdfdff4dde12ec0a82d1ccdd33
     build-packages:
       - libpopt-dev
     organize:
       usr/lib64: usr/lib/x86_64-linux-gnu
+    override-build: |
+      # apply patches from fwupd-snapcraft
+      git am $SNAPCRAFT_PART_BUILD/../../../patches/efivar/000*.patch
+      snapcraftctl build
   libefivar-fixpkgconfig:
     plugin: make
     source: libefivar-fixpkgconfig
@@ -127,10 +131,12 @@ parts:
                        "-Dlibjcat:gtkdoc=false",
                        "-Dlibjcat:introspection=false",
                        "-Dlibjcat:tests=false"]
-    source: https://github.com/Lyoncore/fwupd.git
+    source: https://github.com/fwupd/fwupd.git
     source-type: git
-    source-branch: stable_release_for_core
+    source-tag: 1.4.2
     override-build: |
+      # apply patches from fwupd-snapcraft
+      git am $SNAPCRAFT_PART_BUILD/../../../patches/fwupd/000*.patch
       snapcraftctl build
       echo $(git describe HEAD --always) > $SNAPCRAFT_STAGE/version
       # TODO: don't use hardcoded
