Change snap naming convention from fwupd to uefi_fw_tools
Switch back to original name for adding this patch for fwupd:
0005-Change-fwupd-service-naming-convention-for-uefi-fw-t.patch

--- a/snapcraft-devmode.yaml
+++ b/snapcraft-devmode.yaml
@@ -1,4 +1,4 @@
-name: fwupd
+name: uefi-fw-tools
 summary: A standalone version of fwupd to install newer firmware updates
 description: |
   This is a tool that can be used to install firmware updates on devices
@@ -39,7 +39,7 @@ parts:
     plugin: make
     source: https://github.com/lyoncore/efivar.git
     source-type: git
-    source-branch: 20200423
+    source-branch: '20200423'
     build-packages:
       - libpopt-dev
     organize:
