Add hardware-observe and shutdown interface for fwupd and fwupdmgr respectively
* Use hardware-observe to provide all HW info (e.g. dmi table)
* Use shutdown to provide "Reboot" dbus API for fwupdmgr

--- a/snapcraft-devmode.yaml
+++ b/snapcraft-devmode.yaml
@@ -13,13 +13,13 @@ apps:
   fwupd:
     command: fwupd.wrapper
     daemon: simple
-    #plugs: [raw-volume]
+    plugs: [hardware-observe]
     slots: [fwupd]
   fwupdmgr:
     command: fwupdmgr.wrapper
     completer:
       share/bash-completion/completions/fwupdmgr
-    plugs: [network,fwupdmgr] #network plug for sendmmsg
+    plugs: [network,fwupdmgr,shutdown] #network plug for sendmmsg
 
 plugs:
   fwupdmgr:
