--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -75,6 +75,8 @@ layout:
     bind-file: $SNAP/etc/udisks2/udisks2.conf
   /etc/libblockdev/conf.d:
     bind: $SNAP/etc/libblockdev/conf.d
+  /usr/bin/gpg:
+    bind-file: $SNAP/usr/bin/gpg
 
 parts:
   udisks:
@@ -400,3 +402,12 @@ parts:
       - fwupdtpmevlog.wrapper
       - fwupdagent.wrapper
     after: [update-mime]
+  gpg:
+    plugin: nil
+    stage-packages:
+      - gpg
+    prime:
+      - -usr/bin/gpgconf
+      - -usr/bin/gpg-connect-agent
+      - -usr/share/doc
+      - -usr/share/man
