Rename uefi.conf to uefi_capsule.conf for upstream change
upstream commit-id: ee2e2c36749298e58b34dca163ea48a7fc925da6

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -426,4 +426,4 @@ parts:
   fwupd-uefi-conf:
     plugin: nil
     override-prime: |
-      sed -i 's|#FallbacktoRemovablePath=false|FallbacktoRemovablePath=true|' etc/fwupd/uefi.conf
+      sed -i 's|#FallbacktoRemovablePath=false|FallbacktoRemovablePath=true|' etc/fwupd/uefi_capsule.conf
