--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -87,7 +87,7 @@ parts:
     override-pull: |
       snapcraftctl pull
       # apply patches from fwupd-snapcraft
-      git am $SNAPCRAFT_PART_BUILD/../../../patches/udisks2/000*.patch
+      git am ${SNAPCRAFT_PART_SRC}/../../../patches/udisks2/000*.patch
     autotools-configure-parameters: ['--enable-fhs-media']
     build-packages:
         - pkg-config
@@ -130,6 +130,10 @@ parts:
         - libblockdev-mdraid2
         - libblockdev-fs2
         - libblockdev-crypto2
+    organize:
+      usr/local/bin/udisksctl: bin/udisksctl
+      usr/local/libexec/udisks2/udisksd: libexec/udisks2/udisksd
+      usr/local/lib/libudisks2.so.0: lib/x86_64-linux-gnu/libudisks2.so.0
     filesets:
       licenses:
           - usr/share/doc/*/*copyright*
@@ -218,6 +222,8 @@ parts:
     build-packages:
       - ninja-build
       - python3-distutils-extra
+    stage:
+      - -lib64
     prime:
       - -bin
       - -etc
@@ -260,9 +266,13 @@ parts:
     source: https://github.com/fwupd/fwupd.git
     source-type: git
     source-tag: 1.5.7
-    override-build: |
+    build-environment:
+      - PYTHONPATH: ${SNAPCRAFT_STAGE}/usr/lib/python3/dist-packages
+    override-pull: |
+      snapcraftctl pull
       # apply patches from fwupd-snapcraft
-      git am $SNAPCRAFT_PART_BUILD/../../../patches/fwupd/000*.patch
+      git am ${SNAPCRAFT_PART_SRC}/../../../patches/fwupd/000*.patch
+    override-build: |
       snapcraftctl build
       echo $(git describe HEAD --always) > $SNAPCRAFT_STAGE/version
       # TODO: don't use hardcoded
@@ -348,7 +358,7 @@ parts:
       - -usr/lib/*/pkgconfig
       # we don't want system gnutls leaking in
       - -usr/lib/*/libgnutls*
-    after: [libefivar-fixpkgconfig, meson, build-introspection, tpm2-tss, gnutls, curl]
+    after: [udisks, libefivar-fixpkgconfig, meson, build-introspection, tpm2-tss, gnutls, curl]
   #fetch the latest version of the signed bootloader
   #this might not match our fwupdx64.efi, but it's better than nothing
   fwup-efi-signed:
