Drop version for uefi-fw-tools and update fwupd to 1.7.0
Signed-off-by: Hsieh-Tseng Shen <woodrow.shen@gmail.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -265,7 +265,7 @@ parts:
                        "-Dlibjcat:tests=false"]
     source: https://github.com/fwupd/fwupd.git
     source-type: git
-    source-tag: 1.5.11
+    source-tag: 1.7.0
     build-environment:
       - PYTHONPATH: ${SNAPCRAFT_STAGE}/usr/lib/python3/dist-packages
     override-pull: |
@@ -276,9 +276,8 @@ parts:
       snapcraftctl build
       echo $(git describe HEAD --always) > $SNAPCRAFT_STAGE/version
       # TODO: don't use hardcoded
-      UEFI_FW_TOOLS=1.6.4
-      FWUPD=1.5.11
-      VERSION=$UEFI_FW_TOOLS-$FWUPD+git$(git rev-parse --short HEAD)
+      FWUPD=1.7.0
+      VERSION=confined-$FWUPD+git$(git rev-parse --short HEAD)
       snapcraftctl set-version $VERSION
     build-packages:
       - bash-completion
