Fix the build error due to upstream change
commit b6ff1ea40ea86c464c221c5dfb4206e175b83cf4
Author: Sanjay Sheth <ssheth@logitech.com>
Date:   Fri Aug 6 01:20:40 2021 -0700

    Add support for devices supporting the Logitech bulk controller protocol

Signed-off-by: Hsieh-Tseng Shen <woodrow.shen@gmail.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -296,11 +296,13 @@ parts:
       - libpango1.0-dev
       - libpci-dev
       - libpolkit-gobject-1-dev
+      - libprotobuf-c-dev
       - libsmbios-dev
       - libsqlite3-dev
       - libsystemd-dev
       - locales
       - pkg-config
+      - protobuf-c-compiler
       - systemd
       - uuid-dev
       - libcurl4-gnutls-dev
