Reset meson-parameters for fwupd build
commit 1e17457b16c9a05f6f32799ceb3922b76b807994
Author: Mario Limonciello <mario.limonciello@amd.com>
Date:   Fri Jun 4 13:47:32 2021 -0500

    Allow building the documentation with gi-docgen and gtk-doc

    Until gi-docgen is declared stable support either of them.
    This effectively means that hand builds and CI builds will use
    gi-docgen, but distro builds use gtk-doc-tools.

Signed-off-by: Hsieh-Tseng Shen <woodrow.shen@gmail.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -247,7 +247,7 @@ parts:
     meson-parameters: [--prefix=/,
                        -Dtests=false,
                        -Dbuild=all,
-                       -Dgtkdoc=false,
+                       -Ddocs=none,
                        -Dintrospection=false,
                        -Dman=false,
                        -Dpolkit=false,
