Add libprotobuf-c.so.1 into stage dependency
Signed-off-by: Hsieh-Tseng Shen <woodrow.shen@gmail.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -319,6 +319,7 @@ parts:
       - libgpgme11
       - libjson-glib-1.0-0
       - libpolkit-gobject-1-0
+      - libprotobuf-c1
       - libsmbios-c2
       - glib-networking
       - libglib2.0-bin
